[package]
name = "protein-visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "22.1"
winit = "0.29"
pollster = "0.3"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
notify = "6.1"
crossbeam-channel = "0.5"
glam = { version = "0.25", features = ["serde"] }
bytemuck = { version = "1.14", features = ["derive"] }
pdbtbx = { path = "./pdbtbx-master", version = "0.12", features = ["rstar", "rayon"] }
reqwest = { version = "0.12", features = ["blocking"] }
rayon = "1.10"
glyphon = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.53", features = ["derive"] }
nalgebra = "0.32"
rstar = "0.12"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.2"
